对字幕查看功能进行细化，新增本地字幕浏览功能，支持切换选中项